Add DisposableEffect to manage WebView lifecycle
Introduces DisposableEffect in DeviceWebView to properly remove the WebView from its parent on disposal, preventing memory leaks and crashes during configuration changes. Adds androidx.compose.runtime as a dependency to support this change.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -90,6 +90,7 @@ semver4j = { module = "com.vdurmont:semver4j", version.ref = "semver4j" }
 # TODO: Manually import the icons instead of importing this.
 compose-material-icons = { group = "androidx.compose.material", name = "material-icons-core" }
 androidx-compose-ui-geometry = { group = "androidx.compose.ui", name = "ui-geometry" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
