--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 kotlin = "2.3.0"
 kotlinxSerializationJson = "1.9.0"
-ksp = "2.2.21-2.0.4"
+ksp = "2.3.4"
 lifecycleViewmodelKtx = "2.10.0"
 loggingInterceptor = "5.3.2"
 materialKolor = "4.0.5"
