Update .gitignore for Spotless Applier plugin

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ lint/tmp/
 /.idea/runConfigurations.xml
 .idea/deviceManager.xml
 .idea/androidTestResultsUserPreferences.xml
+/.idea/spotless-applier.xml
