Style: Improve widget configuration screen
- Replaced the simple "Select Device" text with a `TopAppBar`.
- Applied `WLEDNativeTheme` to the configuration activity for a consistent look.
- Used the `deviceName` composable to display device names.
- Updated text styles and layout to better match the main application.
- Removed unused widget-related string resources.
- Set a theme for the activity in `AndroidManifest.xml` to remove the action bar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
             android:exported="true"
             android:taskAffinity=""
             android:excludeFromRecents="true"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
