feat: Add deep linking support for wled:// scheme and AP mode
Implement deep linking to allow external apps and browsers to open
specific WLED devices via custom URL schemes.

## Features
- Support wled://{mac_address} to navigate directly to a device
- Support wled://{ip_or_hostname} with auto-discovery for unknown devices
- Support http://4.3.2.1 for WLED AP mode access
- Dismissable loading dialog during device discovery
- Error dialog when device cannot be reached

## Changes
- Add intent filters in AndroidManifest.xml for deep link handling
- Create DeepLinkHandler domain class for parsing deep link URIs
- Add DeepLinkState sealed class in MainViewModel for state management
- Integrate with DeviceFirstContactService for auto-discovery
- Make MAC address lookup case-insensitive in DeviceDao
- Rename EXTRA_DEVICE_ADDRESS to EXTRA_DEVICE_MAC_ADDRESS for clarity
- Add French and Chinese translations for deep link strings
- Add Robolectric for unit testing Android APIs
- Configure detekt to ignore @Preview annotated functions

## Testing
- Add 25 unit tests for DeepLinkHandler (URI parsing, MAC validation)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,7 @@ semver4j = "3.1.0"
 webkit = "1.15.0"
 graphicsShapes = "1.1.0"
 truth = "1.4.5"
+robolectric = "4.16"
 detekt = "1.23.8"
 spotless = "8.1.0"
 
@@ -90,6 +91,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 retrofit2-kotlin-coroutines-adapter = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "retrofit2KotlinCoroutinesAdapter" }
 semver4j = { module = "com.vdurmont:semver4j", version.ref = "semver4j" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 protoc = { module = "com.google.protobuf:protoc", version.ref = "protobufJavalite" }
 androidx-compose-ui-geometry = { group = "androidx.compose.ui", name = "ui-geometry" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
