CI: Optimize Gradle build and test execution
- Enable parallel test execution by setting `maxParallelForks` in `app/build.gradle.kts`.
- Consolidate Spotless, Detekt, and Lint checks into a single Gradle command in the `check.yml` workflow.
- Increase the Gradle JVM heap size from 2GB to 4GB in `gradle.properties`.
- Disable Spotless's `ratchetFrom` on CI to avoid fetching git history and check all files instead.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -39,8 +39,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v5
@@ -51,14 +49,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
 
-      - name: Run Spotless
-        run: ./gradlew spotlessCheck
-
-      - name: Run Detekt
-        run: ./gradlew detekt
-
-      - name: Run lint
-        run: ./gradlew lintDebug
+      - name: Run Analysis
+        run: ./gradlew spotlessCheck detekt lintDebug
 
       - name: Upload Lint Results
         if: always()
