Refactor: Centralize app version in `libs.versions.toml`
- Moved `versionCode` and `versionName` from `app/build.gradle.kts` to the `[versions]` section of `gradle/libs.versions.toml`.
- Updated the `app/build.gradle.kts` file to read these values from the version catalog.
- This centralizes version management, making it easier to update for new releases.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,8 @@
 [versions]
+# App version - Update these when releasing
+app-versionCode = "49"
+app-versionName = "7.0.0-beta260113-01"
+
 agp = "8.13.2"
 composeBom = "2025.12.01"
 converterMoshi = "3.0.0"
