feat(widget): Add widget preview for Android 15
This commit adds support for widget previews, a feature introduced in Android 15 (Vanilla Ice Cream).

- A `WidgetPreviewPublisher` is added to manage the publishing of widget previews to the launcher, handling versioning to avoid unnecessary updates.
- The `Glance` library is updated to `1.2.0-rc01` to support the new preview APIs.
- The `WledWidget` now implements `providePreview` to render a static preview in the widget picker.
- The widget's description and name strings have been updated to be more descriptive.
- The widget's metadata (`wled_widget_info.xml`) has been adjusted for better sizing in the launcher.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ coreKtx = "1.17.0"
 coreSplashscreen = "1.2.0"
 datastorePreferences = "1.2.0"
 espressoCore = "3.7.0"
-glance = "1.1.1"
+glance = "1.2.0-rc01"
 # Version 2.53.1 causes issue with compiling
 # https://github.com/google/dagger/issues/4533
 hiltAndroid = "2.57.2"
