--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
 
         <receiver
             android:name=".widget.WledWidgetReceiver"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/widget_single_device_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
